tests/fixtures/errors/sig_unknown_type.z
# sig_unknown_type.z -- a signature typeref naming a nonexistent type is an
# error even when the function is never called (signatures resolve eagerly
# at the stamp pass, not just on demand).
deadfn: function {a: NoSuchType} is {
    print "x"
}

main: function is {
    print "ok"
}
